<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zchampion2020@my.fit.edu">Zach Champion</maintainer>
  <license>TODO: License declaration</license>

  <depend>twist_stamper</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ar3_moveit_config</exec_depend>
  <exec_depend>joy</exec_depend>

  <!-- Required to launch MoveIt -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
